# experiments_with_modules

./: .gitignore  CMakeLists.txt  Makefile.debug  Makefile.release  README.md  actor.ixx  main.cpp  manager.cpp  manager.ixx
